# atlas

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample-fastapi.txt  sample-guardduty.md  sample-security-hub.md
api/: main.py
api/routes/: ingestion_routes.py  query_routes.py
api/schemas/: __init__.py  ingestion_schema.py  query_schema.py
cache/: semantic_cache.py
context/: context_optimizer.py
core/: config.py  dependencies.py
db/: models.py  neo4j_client.py  postgres.py  redis_client.py
embeddings/: embedding_model.py
ingestion/: chunking.py  document_parser.py  embedding_pipeline.py  ingestion_service.py
llm/: gemini_client.py  llm_interface.py
logs/: retrieval_metrics.jsonl
metrics/: retrieval_metrics.py
query_intelligence/: query_classifier.py  query_types.py  strategy_selector.py
ranking/: reranker.py  result_aggregator.py
retrieval/: base_retriever.py  bm25_retriever.py  graph_builder.py  graph_retriever.py  hybrid_ranker.py  router.py  sql_retriever.py  vector_retriever.py
