[project]
name = "atlas"
version = "0.1.0"
description = "Atlas - Distributed Intelligent RAG Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.115.0",
	"uvicorn>=0.30.0",
	"pydantic>=2.7.0",
	"pydantic-settings>=2.3.0",
	"python-multipart>=0.0.9",
	"google-genai>=1.0.0",
	"redis>=5.0.7",
	"sqlalchemy>=2.0.32",
	"asyncpg>=0.29.0",
	"qdrant-client>=1.11.1",
	"elasticsearch>=8.14.0,<9.0.0",
	"neo4j>=5.23.1",
	"pypdf>=4.3.1",
	"sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.2.0",
	"pytest-asyncio>=0.23.7",
	"httpx>=0.27.0",
	"ruff>=0.5.7",
	"mypy>=1.10.1",
]
